--- a/ReactJS_RESTfulAPI/src/main/resources/application.properties
+++ b/ReactJS_RESTfulAPI/src/main/resources/application.properties
@@ -1,12 +1,24 @@
+# Server 
+server.port=8080
+
 # JDBC properties
 spring.datasource.url=jdbc:mysql://localhost/reactjs
 spring.datasource.username=root
-spring.datasource.password=222Network
+spring.datasource.password=******
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#Spring Boot 2.0 includes HikariDataSource by default
+#spring.datasource.type = com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.connection-timeout = 20000  
+spring.datasource.hikari.minimum-idle= 10 
+spring.datasource.hikari.maximum-pool-size= 16 
+spring.datasource.hikari.idle-timeout=20000 
+spring.datasource.hikari.max-lifetime= 60000 
+spring.datasource.hikari.auto-commit =true 
+
 # JPA properties (load sql queries from 'import.sql')
-#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 #Logging
@@ -15,5 +27,10 @@ logging.file=application.log
 #JWT secret-key
 jwt.secret=javainuse
 
-# Server 
-server.port=8000
+# java mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=******@gmail.com
+spring.mail.password=******
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
